manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saaspe-docusign
  namespace: {#namespace#}
  labels:
    app: saaspe-docusign
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saaspe-docusign
  template:
    metadata:
      name: saaspe-docusign
      labels:
        app: saaspe-docusign
    spec:
      containers:
        - name: saaspe-docusign
          image: {#image#}
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
          # livenessProbe:
          #   httpGet:
          #     port: 6060
          #     path: /actuator/health/liveness
          #   initialDelaySeconds: 300
          #   initialDelaySeconds: 300
          #   periodSeconds: 300
          # readinessProbe:
          #   httpGet:
          #     port: 6060
          #     path: /actuator/health/readiness
          #   initialDelaySeconds: 300
          #   initialDelaySeconds: 300
          #   periodSeconds: 300
          resources:
            requests:
              memory: "312Mi"
              cpu: "350m"
            limits:
              memory: "512Mi"
              cpu: "512m"
---
apiVersion: v1
kind: Service
metadata:
  name: saaspe-docusign-svc
  namespace:  {#namespace#}
  labels:
    app: saaspe-docusign
spec:
  ports:
    - port: 8085
      targetPort: 8085
  selector:
    app: saaspe-docusign
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: saaspe-docusign-ingress
  namespace: {#namespace#}
spec:
  rules:
  - host: {#host#}
    http:
      paths:
      - backend:
          service:
            name: saaspe-docusign-svc
            port:
              number: 8085
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - {#host#}
    secretName: saspe-app-tls1
